<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="stardroid.preferences">
  <PreferenceCategory>
    <PreferenceScreen android:title="@string/location_prefs">
      <PreferenceCategory>
        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/force_gps_pref"
            android:summary="@string/force_gps_pref_hint"
            android:key="force_gps"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/no_use_gps_pref"
            android:summary="@string/no_use_gps_pref_hint"
            android:key="no_auto_locate"/>
        <!-- Set the default location to Galileo's birthplace -->
        <EditTextPreference
            android:key="location"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/location_placename"
            android:summary="@string/location_placename_hint"
            android:dependency="no_auto_locate"
            android:defaultValue="" />
        <EditTextPreference
            android:key="latitude"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/location_lat_pref"
            android:dependency="no_auto_locate"
            android:summary="@string/degrees"
            android:inputType="number|numberSigned|numberDecimal"
            android:defaultValue="0"/>
        <EditTextPreference
            android:key="longitude"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/location_long_pref"
            android:dependency="no_auto_locate"
            android:summary="@string/degrees"
            android:inputType="number|numberSigned|numberDecimal"
            android:defaultValue="0"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/use_magnetic_correction"
            android:key="use_magnetic_correction"/>
      </PreferenceCategory>
    </PreferenceScreen>
    <CheckBoxPreference
        android:defaultValue="true"
        android:title="@string/use_sound_effects"
        android:key="sound_effects"/>
    

    <PreferenceScreen android:key="appearance_prefs" android:title="@string/appearance_prefs">
      <ListPreference
            android:key="auto_dimness"
            android:title="@string/auto_dimness_preference"
            android:entryValues="@array/auto_dim_enums"
            android:entries="@array/auto_dim_texts"
            android:defaultValue="SYSTEM" />
      <ListPreference
          android:key="font_size"
          android:title="@string/font_size_preference"
          android:summary="@string/font_size_preference_description"
          android:entryValues="@array/font_size_enums"
          android:entries="@array/font_size_texts"
          android:defaultValue="MEDIUM" />
    </PreferenceScreen>

  </PreferenceCategory>

  <PreferenceScreen android:key="source_provider_prefs" android:title="Layers">
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_all_layers_pref"
          android:key="source_provider.all" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_stars_pref"
          android:key="source_provider.0" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_constellations_pref"
          android:key="source_provider.1" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_constellation_art_pref"
          android:key="source_provider.constellation_art" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_messier_objects_pref"
          android:key="source_provider.2" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_planets_pref"
          android:key="source_provider.3" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_grid_pref"
          android:key="source_provider.4" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_ground_pref"
          android:key="source_provider.landscape" />
      <CheckBoxPreference
          android:defaultValue="false"
          android:title="@string/show_horizon_lines_pref"
          android:key="source_provider.horizon_line" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_sky_gradient"
          android:key="source_provider.sky_gradient" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_milky_way"
          android:key="source_provider.milky_way" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_meteors_pref"
          android:key="source_provider.6" />
      <CheckBoxPreference
          android:defaultValue="true"
          android:title="@string/show_comet_layer_pref"
          android:key="source_provider.comets" />
      <CheckBoxPreference
          android:defaultValue="false"
          android:title="@string/show_galactic_layer_pref"
          android:key="source_provider.galactic_plane" />
      <CheckBoxPreference
          android:defaultValue="false"
          android:title="@string/show_ecliptic_layer_pref"
          android:key="source_provider.ecliptic" />
      <CheckBoxPreference
          android:defaultValue="false"
          android:title="@string/show_custom_objects_pref"
          android:key="source_provider.7" />
      <CheckBoxPreference
          android:defaultValue="false"
          android:title="@string/show_point_source_comparison_pref"
          android:key="point_source_comparison" />
  </PreferenceScreen>
  <PreferenceScreen android:key="sensor_prefs" android:title="@string/sensor_prefs">
    <PreferenceCategory>
      <CheckBoxPreference
          android:defaultValue="false"
          android:title="@string/disable_gyro_preference_title"
          android:summary="@string/disable_gyro_preference_summary"
          android:key="disable_gyro"/>
      <ListPreference
          android:key="sensor_speed"
          android:title="@string/sensor_speed"
          android:entryValues="@array/sensor_speed_values"
          android:entries="@array/sensor_speed"
          android:defaultValue="STANDARD" />
      <ListPreference
          android:key="sensor_damping"
          android:title="@string/sensor_damping"
          android:entryValues="@array/sensor_damping_values"
          android:entries="@array/sensor_damping"
          android:defaultValue="EXTRA HIGH" />
      <CheckBoxPreference
          android:defaultValue="false"
          android:title="@string/sensor_reverse_preference_title"
          android:summary="@string/sensor_reverse_preference_summary"
          android:key="reverse_magnetic_z"/>
      <ListPreference
          android:key="viewing_direction"
          android:title="@string/rotate_horizon_preference_title"
          android:summary="@string/rotate_horizon_preference_summary"
          android:entryValues="@array/viewing_direction_values"
          android:entries="@array/viewing_direction"
          android:defaultValue="STANDARD" />
    </PreferenceCategory>
  </PreferenceScreen>

  <PreferenceCategory android:title="@string/data_prefs">
      <Preference
          android:key="import_comets"
          android:title="@string/import_comets_pref"
          android:summary="@string/import_comets_pref_summary" />
      <Preference
          android:key="comet_list"
          android:title="Downloaded Comets"
          android:summary="No comets downloaded"
          android:selectable="false" />
      <Preference
          android:key="import_eop"
          android:title="Import Earth Orientation"
          android:summary="Download EOP data from IERS" />
      <Preference
          android:key="eop_data"
          android:title="Earth Orientation Data"
          android:summary="No data downloaded"
          android:selectable="false" />
  </PreferenceCategory>
</PreferenceScreen>
